# TrianglePainting

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Manifest.toml  Project.toml  README.md  evolve.ipynb  pyproject.toml  setup.py  viewer.ipynb
bench/: sim.jl
benchmarks/: bench_composit_scalar.cpp  bench_memory_throughput.cpp  main.cpp  visualize_memop_benchmarks.py
bindings/: geometry.cpp  main.cpp  nb_image.h  rasterization.cpp  shaders.cpp
bindings/geometry/: barycentric.cpp  types.cpp
bindings/io/: png.cpp
bindings/raster/: rasterization.cpp
experiments/: RasterLossLearner.ipynb  alpha_color_optimization_test.cpp  benchmark_cairo.cpp  benchmark_erkaman_sse-avx_rasterization.cpp  benchmark_erkaman_sse-avx_rasterization.h  benchmark_rasterize.cpp  benchmark_triangle_rasterization.h  evolisa_optimized.cpp  evolisa_original.cpp  gen_random_batch.cpp  globalevo.ipynb  gpt_imsampler.cpp  integer_approximation.cpp  localsolvers.ipynb  opengl_learning.cpp  optimalalpha.ipynb  optimize_triangles.cpp  plot_benchmark_results.py  plot_speed_by_tri_area.py  raster_generic.cpp  raster_triangle_barycentric.cpp  raster_triangle_opengl.cpp  replacement.ipynb  rl_env.ipynb  run_benchmarks.cpp  sampling.ipynb  simpledraw.ipynb  triangle_image_state.h  viewer.ipynb
experiments/compositing/: bench.cpp  impl.h  test.cpp
experiments/rasterization/: bench.cpp  impl.h  test.cpp
experiments_legacy/: evolisa_original.cpp  gen_random_batch.cpp  gpt_imsampler.cpp  integer_approximation.cpp  opengl_learning.cpp  raster_generic.cpp  raster_python.py  triangle_image_state.h
experiments_legacy2/: benchmark_cairo.h  benchmark_rasterize.h  benchmark_triangle_rasterization.h  run_benchmarks.cpp
include/: colours.h  common.h  composit.h  geometry.h  image.h  pixel_types.h  rasterize.h  shaders.h  utils.h
include/geometry/: barycentric.h  types.h
include/io/: image.h  png.h
include/numerical/: reference_tensor_programs.h  tensor_containers.h
include/raster/: README.md  composit.h  rasterization.h
include/util/: composit.h  dna.h  evaluate_cuda.h  evaluate_naive.h  misc_math.h  util_cuda.h
polypaint/: __init__.py  utils.py
src/: Draw.jl  DrawGPU.jl  GreedySim.jl  Mutate.jl  Paint.jl  Pixel.jl  Raster.jl  Shapes.jl  Spatial.jl  colours.cpp  composit.cpp  geometry.cpp  image.cpp  utils.h
src/geometry/: barycentric.cpp
src/io/: image.cpp  png.cpp
src/python/: bindings.cpp
src/raster/: composit.cpp  raster_cpu.cpp  raster_opengl.cpp
src/util/: evaluate_gpu.cu  evaluate_naive.cpp
test/: TestCuda.jl  TestDraw.jl  TestRast.jl  TestSim.jl  TestSpatial.jl
test/geometry/: barycentric.cpp
test/io/: png.cpp
test/numerical/: tensor_programs.cpp
test/temp/: README.md
tests/: test_basic.py
tests_cpp/: composit.cpp  geometry.cpp  image.cpp
tests_cpp/io/: png.cpp
tests_py/: test_basic.py
